--- a/style.css
+++ b/style.css
@@ -3,3 +3,41 @@ body {
   height: 100%;
   margin: 0;
 }
+
+h1 {
+  text-align: center;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+nav{
+  background-color: aqua;
+  text-align: center;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+figcaption {
+  font-size: 12px;
+  text-align: center;
+}
+#featured-property > p {
+   width: 800px;
+   text-align: center;
+   margin-left: auto;
+   margin-right: auto;
+   padding-top: 10x;
+}
+
+div {
+  float: left;
+  background-color: red;
+  text-align: center;
+  width: 25%;
+}
+
+
+
